Fix a z-index issue with the search box, left align input

--- a/themes/greatermedia/assets/css/sass/components/_search.scss
+++ b/themes/greatermedia/assets/css/sass/components/_search.scss
@@ -17,7 +17,7 @@
 		border-top: none;
 		@include transition(all 200ms ease-in-out);
 		@include transform(translate(0, -100%));
-		z-index: 1000;
+		z-index: 5000000; /* IAB z-index standards for nav drop downs. Prevents an ad from being over top unless it's a full-screen ad */
 	}
 
 	.logged-in & {
@@ -53,7 +53,6 @@
 		outline: none;
 		font-size: ms(7);
 		color: $color-text-black;
-		text-align: center;
 		@include placeholder {
 			color: $secondary-link;
 		}
